# local-agent-with-mcp

./: README.md  agent.py  main.py  notes.txt  pyproject.toml  requirements.txt  server_calculator.py  server_notes.py
