[project]
name = "local-agent-with-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.3",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "mcp-client>=0.0.0",
    "mcp[cli]>=1.20.0",
    "ollama-mcp-bridge>=0.7.0",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "statsmodels>=0.14.5",
    "toml>=0.10.2",
    "uvicorn>=0.38.0",
]
